{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 0,
  "lineage": "",
  "resources": [
    {
      "module": "module.Nat-GW",
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP-NAT-GW1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-086f052d9fdcd2c36",
            "domain": "vpc",
            "id": "eipalloc-086f052d9fdcd2c36",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-44-63-201.compute-1.amazonaws.com",
            "public_ip": "52.44.63.201",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT-GW-EIP1"
            },
            "tags_all": {
              "Name": "NAT-GW-EIP1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.Nat-GW",
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP-NAT-GW2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e78e9ed58a42e5a",
            "domain": "vpc",
            "id": "eipalloc-09e78e9ed58a42e5a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-217-171-198.compute-1.amazonaws.com",
            "public_ip": "44.217.171.198",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT-GW-EIP2"
            },
            "tags_all": {
              "Name": "NAT-GW-EIP2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.Nat-GW",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-086f052d9fdcd2c36",
            "association_id": "eipassoc-08f73b960d00b4529",
            "connectivity_type": "public",
            "id": "nat-04963d683b17f8629",
            "network_interface_id": "eni-051749ab436727329",
            "private_ip": "10.0.1.236",
            "public_ip": "52.44.63.201",
            "subnet_id": "subnet-05371f722247d9e2b",
            "tags": {
              "Name": "nat_gw1"
            },
            "tags_all": {
              "Name": "nat_gw1"
            }
          },
          "dependencies": [
            "module.Nat-GW.aws_eip.EIP-NAT-GW1",
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_subnet.pub_sub1",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.Nat-GW",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e78e9ed58a42e5a",
            "association_id": "eipassoc-02da33618ceb09cd1",
            "connectivity_type": "public",
            "id": "nat-0eb89d162ba2e24f0",
            "network_interface_id": "eni-08b25f7448285854a",
            "private_ip": "10.0.2.103",
            "public_ip": "44.217.171.198",
            "subnet_id": "subnet-0b3fc9fd516eb4f6a",
            "tags": {
              "Name": "nat_gw2"
            },
            "tags_all": {
              "Name": "nat_gw2"
            }
          },
          "dependencies": [
            "module.Nat-GW.aws_eip.EIP-NAT-GW2",
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_subnet.pub_sub2",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.Nat-GW",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri-rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251126721760:route-table/rtb-069e97f1cc9354f29",
            "id": "rtb-069e97f1cc9354f29",
            "owner_id": "251126721760",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04963d683b17f8629",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pri-rt-a"
            },
            "tags_all": {
              "Name": "pri-rt-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ec47d42e0068915"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Nat-GW.aws_eip.EIP-NAT-GW1",
            "module.Nat-GW.aws_nat_gateway.nat_gw1",
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_subnet.pub_sub1",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.Nat-GW",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri-rt-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251126721760:route-table/rtb-05ca9467747a88644",
            "id": "rtb-05ca9467747a88644",
            "owner_id": "251126721760",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0eb89d162ba2e24f0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pri-rt-b"
            },
            "tags_all": {
              "Name": "pri-rt-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ec47d42e0068915"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Nat-GW.aws_eip.EIP-NAT-GW2",
            "module.Nat-GW.aws_nat_gateway.nat_gw2",
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_subnet.pub_sub2",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.Nat-GW",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-sub3-with-pri-rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08581a45b8d217a70",
            "route_table_id": "rtb-069e97f1cc9354f29",
            "subnet_id": "subnet-0ea1d6152fcc510c1"
          },
          "dependencies": [
            "module.Nat-GW.aws_eip.EIP-NAT-GW1",
            "module.Nat-GW.aws_nat_gateway.nat_gw1",
            "module.Nat-GW.aws_route_table.pri-rt-a",
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_subnet.pri_sub3",
            "module.VPC.aws_subnet.pub_sub1",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.Nat-GW",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-sub4-with-pri-rt-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de925e736782e92d",
            "route_table_id": "rtb-05ca9467747a88644",
            "subnet_id": "subnet-0de5a2df6b88a7fe2"
          },
          "dependencies": [
            "module.Nat-GW.aws_eip.EIP-NAT-GW2",
            "module.Nat-GW.aws_nat_gateway.nat_gw2",
            "module.Nat-GW.aws_route_table.pri-rt-b",
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_subnet.pri_sub4",
            "module.VPC.aws_subnet.pub_sub2",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251126721760:internet-gateway/igw-05e4840cf98f3fa56",
            "id": "igw-05e4840cf98f3fa56",
            "owner_id": "251126721760",
            "tags": {
              "Name": "ToDo-App-igw"
            },
            "tags_all": {
              "Name": "ToDo-App-igw"
            },
            "vpc_id": "vpc-04ec47d42e0068915"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251126721760:route-table/rtb-050d80de8b86f209b",
            "id": "rtb-050d80de8b86f209b",
            "owner_id": "251126721760",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e4840cf98f3fa56",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ToDo-App-pub_rt"
            },
            "tags_all": {
              "Name": "ToDo-App-pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ec47d42e0068915"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0693673d72123d752",
            "route_table_id": "rtb-050d80de8b86f209b",
            "subnet_id": "subnet-05371f722247d9e2b"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_route_table.pub_rt",
            "module.VPC.aws_subnet.pub_sub1",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c03ae5abfe1b05db",
            "route_table_id": "rtb-050d80de8b86f209b",
            "subnet_id": "subnet-0b3fc9fd516eb4f6a"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.igw",
            "module.VPC.aws_route_table.pub_rt",
            "module.VPC.aws_subnet.pub_sub2",
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251126721760:subnet/subnet-0ea1d6152fcc510c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea1d6152fcc510c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251126721760",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub3",
              "kubernetes.io/cluster/ToDo-App": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "pri-sub3",
              "kubernetes.io/cluster/ToDo-App": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04ec47d42e0068915"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251126721760:subnet/subnet-0de5a2df6b88a7fe2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de5a2df6b88a7fe2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251126721760",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub4",
              "kubernetes.io/cluster/ToDo-App": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "pri-sub4",
              "kubernetes.io/cluster/ToDo-App": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04ec47d42e0068915"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251126721760:subnet/subnet-05371f722247d9e2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05371f722247d9e2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "251126721760",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub1",
              "kubernetes.io/cluster/ToDo-App": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "pub-sub1",
              "kubernetes.io/cluster/ToDo-App": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04ec47d42e0068915"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251126721760:subnet/subnet-0b3fc9fd516eb4f6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3fc9fd516eb4f6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "251126721760",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub2",
              "kubernetes.io/cluster/ToDo-App": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "pub-sub2",
              "kubernetes.io/cluster/ToDo-App": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04ec47d42e0068915"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251126721760:vpc/vpc-04ec47d42e0068915",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-043d65309e33d4cc0",
            "default_route_table_id": "rtb-0b638397d21b43eb1",
            "default_security_group_id": "sg-0375252cff94c08af",
            "dhcp_options_id": "dopt-034317afe52a86861",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04ec47d42e0068915",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b638397d21b43eb1",
            "owner_id": "251126721760",
            "tags": {
              "Name": "ToDo-App-vpc"
            },
            "tags_all": {
              "Name": "ToDo-App-vpc"
            }
          }
        }
      ]
    }
  ]
}